<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings_save"
        android:orderInCategory="10"
        android:showAsAction="never"
        android:title="@string/action_settings_save"/>
    <item
        android:id="@+id/action_settings_imp"
        android:orderInCategory="20"
        android:showAsAction="never"
        android:title="@string/action_settings_imp"/>
    <item
        android:id="@+id/action_settings_save2azure"
        android:orderInCategory="10"
        android:showAsAction="never"
        android:title="@string/action_settings_save2azure"/>
    <item
        android:id="@+id/action_settings_impfromazure"
        android:orderInCategory="20"
        android:showAsAction="never"
        android:title="@string/action_settings_impfromazure"/>
    
    <item
        android:id="@+id/action_settings_cancel"
        android:orderInCategory="30"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings_cancel"/>
    
    
</menu>
