<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="at.gepa.androidlib.cfg.template.ui.EditFragment" >

    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:orientation="vertical"
        >
        
        <RadioButton
	        android:id="@+id/rb_TensovalImportId" 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/txtDeviceNameTensovalDuo"
	        android:checked="true"
            >
            
        </RadioButton>
        
	    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:orientation="horizontal"
	        >
	        <TextView
		        android:id="@+id/label_TensovalPersonIndexId" 
		        android:layout_width="wrap_content"
		        android:layout_marginLeft="22dp"
		        android:layout_marginRight="4dp"
		        android:layout_gravity="left|center_vertical"
		        android:layout_height="wrap_content"
		        android:text="@string/label_TensovalPersonIndex"
		        />
		
		    <EditText
		        android:id="@+id/import_txtTensovalPersonId"
		        android:minWidth="50dp"
		        android:layout_marginLeft="4dp"
		        android:layout_gravity="left|center_vertical"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"/>
		</LinearLayout>
        <RadioButton
            android:layout_marginTop="10dp"
	        android:id="@+id/rb_ImportOtherId" 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:enabled="false"
	        android:text="@string/txtDeviceOther"
            />
	    	    
    </LinearLayout>

</RelativeLayout>
